# sci-calc

./: README.md  pyproject.toml  tasks.py
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: calc.py  index.py
src/tests/: calc_integration_test.py  calc_test.py
src/ui/: calc_ui.py
