[project]
name = "sci-calc"
version = "0.1.0"
description = ""
authors = [
    {name = "Uyen",email = "152192561+uyenmh@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "tk (>=0.1.0,<0.2.0)",
    "invoke (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pylint = "^3.3.7"
coverage = "^7.9.2"

